--- a/frontend/preview.html
+++ b/frontend/preview.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/preview.jsx"></script>
+  <script type="module" src="/src/preview/Index.jsx"></script>
 </body>
 
 </html>
