renamed view to screen

--- a/frontend/screen.html
+++ b/frontend/screen.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Athasha View</title>
+  <title>Athasha Screen</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/view/Index.jsx"></script>
+  <script type="module" src="/src/screen/Index.jsx"></script>
 </body>
 
 </html>
