screen button clickable all area, not selection of any text nor on double click

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <title>Athasha Home</title>
 </head>
 
-<body>
+<body onselectstart='return false'>
   <div id="root"></div>
   <script type="module" src="/src/items/Index.jsx"></script>
 </body>
