--- a/frontend/screen.html
+++ b/frontend/screen.html
@@ -8,7 +8,7 @@
   <title>Athasha Screen Viewer</title>
 </head>
 
-<body>
+<body onselectstart='return false'>
   <div id="root"></div>
   <script type="module" src="/src/screen/Index.jsx"></script>
 </body>
