--- a/frontend/views.html
+++ b/frontend/views.html
@@ -8,7 +8,7 @@
   <title>Athasha Views</title>
 </head>
 
-<body>
+<body onselectstart='return false'>
   <div id="root"></div>
   <script type="module" src="/src/views/Index.jsx"></script>
 </body>
