--- a/frontend/dataplot.html
+++ b/frontend/dataplot.html
@@ -8,7 +8,7 @@
   <title>Athasha Dataplot Viewer</title>
 </head>
 
-<body>
+<body onselectstart='return false'>
   <div id="root"></div>
   <script type="module" src="/src/dataplot/Index.jsx"></script>
 </body>
