--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -8,7 +8,7 @@
   <title>Athasha Item Editor</title>
 </head>
 
-<body>
+<body onselectstart='return false'>
   <div id="root"></div>
   <script type="module" src="/src/editor/Index.jsx"></script>
 </body>
