--- a/frontend/laurel.html
+++ b/frontend/laurel.html
@@ -8,7 +8,7 @@
   <title>Athasha Laurel Viewer</title>
 </head>
 
-<body>
+<body onselectstart='return false'>
   <div id="root"></div>
   <script type="module" src="/src/points/Index.jsx"></script>
 </body>
