--- a/frontend/opto22.html
+++ b/frontend/opto22.html
@@ -8,7 +8,7 @@
   <title>Athasha Opto22 Viewer</title>
 </head>
 
-<body>
+<body onselectstart='return false'>
   <div id="root"></div>
   <script type="module" src="/src/points/Index.jsx"></script>
 </body>
